WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
181218
Fix the build on platforms where UICurrentUserInterfaceIdiomIsPad is defined to false
https://bugs.webkit.org/show_bug.cgi?id=181218
Summary
Fix the build on platforms where UICurrentUserInterfaceIdiomIsPad is defined ...
Tim Horton
Reported
2018-01-02 12:30:55 PST
Fix the build on platforms where UICurrentUserInterfaceIdiomIsPad is defined to false
Attachments
Patch
(10.97 KB, patch)
2018-01-02 12:31 PST
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2018-01-02 12:31:17 PST
Created
attachment 330328
[details]
Patch
Tim Horton
Comment 2
2018-01-02 12:32:19 PST
Someone might have some idea about a better way. I started with #pragma disabling the warning, but it was in a lot of places which is kind of annoying.
EWS Watchlist
Comment 3
2018-01-02 12:33:52 PST
Attachment 330328
[details]
did not pass style-queue: ERROR: Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:1158: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Total errors found: 1 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 4
2018-01-02 13:06:49 PST
Comment on
attachment 330328
[details]
Patch Clearing flags on attachment: 330328 Committed
r226335
: <
https://trac.webkit.org/changeset/226335
>
WebKit Commit Bot
Comment 5
2018-01-02 13:06:51 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2018-01-02 13:18:53 PST
<
rdar://problem/36261392
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug