Source/WebKit/UIProcess/ios/SmartMagnificationController.mm
@@ -107,7 +107,7 @@ void SmartMagnificationController::didCollectGeometryForSmartMagnificationGestur
     float minimumScrollDistance;
     if ([m_contentView bounds].size.width <= m_webPageProxy.unobscuredContentRect().width())
         minimumScrollDistance = smartMagnificationPanScrollThresholdZoomedOut;
-    else if (UICurrentUserInterfaceIdiomIsPad())
+    else if (currentUserInterfaceIdiomIsPad())
         minimumScrollDistance = smartMagnificationPanScrollThresholdIPad;
     else
         minimumScrollDistance = smartMagnificationPanScrollThresholdIPhone;
